[tool.poetry]
name = "bayt-ul-hikmat"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.30.0"
# Add other dependencies here

[tool.poetry.build]
packages = [{ include = "bayt-ul-hikmat" }]  # Ensure your package directory is correct
